# techno-search

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.main  Makefile  README.md  docker-compose.yaml  formatter.sh  main.cpp  patterns.txt
MapService/: CMakeLists.txt
MapService/include/: CMakeLists.txt
MapService/include/common_storage/: CMakeLists.txt  commonStorage.h
TECHNO_SEARCH/: CMakeLists.txt  main.cpp
TECHNO_SEARCH/include/common_storage/: CMakeLists.txt
TECHNO_SEARCH/include/marshaller/: marshaller.h
TECHNO_SEARCH/src/shop_service/product_service/: CMakeLists.txt
TECHNO_SEARCH/src/shop_service/product_service/delivery/: CMakeLists.txt
TECHNO_SEARCH/src/shop_service/product_service/product_manager/: CMakeLists.txt  product_manager.h
TECHNO_SEARCH/src/shop_service/product_service/request_models/: CMakeLists.txt  models.cpp
TECHNO_SEARCH/tests/unit/include/: CMakeLists.txt
TECHNO_SEARCH/tests/unit/include/common_storage/: CMakeLists.txt
TECHNO_SEARCH/tests/unit/src/shop_service/: CMakeLists.txt
TECHNO_SEARCH/tests/unit/src/shop_service/product_service/: CMakeLists.txt
TECHNO_SEARCH/tests/unit/src/shop_service/product_service/request_models/: models.cpp
cmd/: CMakeLists.txt  main.cpp  mymain.cpp  pistacho.cpp  shop-main.cpp
docs/: umlmap.drawio
docs/about shop DB/: createDB.txt
docs/howto/: skillservice.txt
docs/map-service/: component-diagram.drawio  umlmap.drawio
docs/mapservice/: README.md  faq  sequence.puml  x.puml
docs/shop-service/: umlServiceShop.drawio  umlShopService.drawio
docs/skill-service/: component-diagram.drawio
include/: CMakeLists.txt
include/common_storage/: commonStorage.h
include/exceptions/: CMakeLists.txt  common_exceptions.cpp  common_exceptions.h
include/graph_storage/: CMakeLists.txt  graphStorage.h
include/http_managers/: CMakeLists.txt
include/http_managers/request_reader/: CMakeLists.txt  reader.cpp  reader.h  request_reader.cpp  request_reader.h
include/http_managers/response_writer/: CMakeLists.txt  writer.cpp  writer.h
include/map_storage/: CMakeLists.txt
include/marshaller/: CMakeLists.txt  marshaller.h
include/router_setupper/: CMakeLists.txt  router_setupper.cpp  router_setupper.h
include/storage/: CMakeLists.txt
include/storage/clickhouse/: CMakeLists.txt
include/storage/clickhouse/query/: CMakeLists.txt  click_query.cpp  click_query.h  query.cpp  query.h
include/storage/clickhouse/reader/: CMakeLists.txt  click_reader.cpp  click_reader.h  reader.cpp  reader.h
include/storage/postgres/query/: CMakeLists.txt  postgres_query.cpp  postgres_query.h  query.cpp  query.h
include/unmarshaller/: CMakeLists.txt  unmarshaller.h
mapService/src/: CMakeLists.txt
mapService/src/map_service/: CMakeLists.txt
mapService/tests/: CMakeLists.txt
mapService/tests/unit/: CMakeLists.txt
shopService/: CMakeLists.txt
shopService/include/: CMakeLists.txt
shopService/include/common_storage/: commonStorage.h
shopService/include/marshaller/: CMakeLists.txt
shopService/src/: CMakeLists.txt
shopService/src/shop_service/product_service/: CMakeLists.txt  product_service.h
shopService/src/shop_service/product_service/product_manager/: CMakeLists.txt
shopService/src/shop_service/product_service/product_storage/: CMakeLists.txt
shopService/src/shop_service/product_service/request_models/: models.cpp  models.h
shopService/src/shop_service/store_service/: CMakeLists.txt
shopService/src/shop_service/store_service/request_models/: models.cpp  models.h
shopService/src/shop_service/store_service/store_manager/: CMakeLists.txt
shopService/src/shop_service/store_service/store_storage/: CMakeLists.txt
shopService/tests/unit/include/common_storage/: common_storage.cpp
shopService/tests/unit/src/shop_service/product_service/request_models/: main.cpp
src/: CMakeLists.txt
src/map_service/: CMakeLists.txt
src/map_service/adapter/: CMakeLists.txt  adapter.cpp  adapter.h
src/map_service/map_models/: CMakeLists.txt  map_models.cpp  map_models.h  map_request_models.cpp
src/map_service/path/: path.h  (+2 more)
src/map_service/path/finder/: CMakeLists.txt  finder.cpp  finder.h
src/map_service/path/models/: CMakeLists.txt  models.cpp  models.h  path_storage_models.cpp  path_storage_models.h
src/map_service/path/usecase/: CMakeLists.txt  path_usecase.cpp  path_usecase.h  usecase.cpp
src/map_service/storage/: CMakeLists.txt  map_storage.cpp  map_storage.h  storage.cpp  storage.h
src/map_service/usecase/: CMakeLists.txt  map_usecase.cpp  map_usecase.h  usecase.cpp  usecase.h
src/shop_service/: CMakeLists.txt  createDB.txt
src/shop_service/product_service/product_storage/: CMakeLists.txt  product_storage.h
src/shop_service/products/delivery/: CMakeLists.txt  delivery.cpp  delivery.h  product_delivery.cpp  product_delivery.h
src/shop_service/products/usecase/: CMakeLists.txt  product_usecase.cpp  product_usecase.h  usecase.cpp  usecase.h
src/shop_service/store_service/delivery/: CMakeLists.txt  delivery.cpp  delivery.h  store_service.cpp  store_service.h
src/shop_service/store_service/store_manager/: CMakeLists.txt  store_manager.cpp  store_manager.h  usecase.cpp  usecase.h
src/shop_service/stores/query/: CMakeLists.txt  query.cpp  query.h  store_query.cpp  store_query.h
src/shop_service/stores/request_models/: CMakeLists.txt  models.cpp  models.h
src/shop_service/stores/storage/: CMakeLists.txt  storage.cpp  storage.h  store_storage.cpp  store_storage.h  stores_storage.cpp  stores_storage.h
src/shop_service/stores/usecase/: CMakeLists.txt  store_usecase.cpp  store_usecase.h  usecase.cpp  usecase.h
src/skill_service/: CMakeLists.txt
src/skill_service/delivery/: CMakeLists.txt  delivery.cpp  delivery.h  skill_delivery.cpp  skill_delivery.h
src/skill_service/storage/: CMakeLists.txt  skill_storage.cpp  skill_storage.h  storage.cpp  storage.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/shop_service/delivery/: CMakeLists.txt  delivery_tests.cpp  main.cpp
tests/unit/skill_service/marshaller/: CMakeLists.txt  main.cpp  marshaller.cpp
(+152 files in other folders)
